--- a/client.html
+++ b/client.html
@@ -32,7 +32,8 @@
         var ICE_SERVERS = [
             {url: "stun:stun.l.google.com:19302"}
         ];
-        var CHAT_AUTOSCROLL = true; /* Chat is autoscrolling by default */
+        var CHAT_AUTOSCROLL = true;
+        /* Chat is autoscrolling by default */
 
         var signaling_socket = null;
         /* our socket.io connection to our webserver */
@@ -117,9 +118,13 @@
             var autoscrollChatIconElement = $('#autoscroll-chat-icon');
             CHAT_AUTOSCROLL = !CHAT_AUTOSCROLL;
             if (CHAT_AUTOSCROLL) {
-                autoscrollChatElement.attr("data-content", "Disable Auto-scroll in chat");
+                autoscrollChatElement.attr("title", "Disable Auto-scroll in chat")
+                        .tooltip('fixTitle')
+                        .tooltip('show');
             } else {
-                autoscrollChatElement.attr("data-content", "Enable Auto-scroll in chat");
+                autoscrollChatElement.attr("title", "Enable Auto-scroll in chat")
+                        .tooltip('fixTitle')
+                        .tooltip('show');
             }
             autoscrollChatIconElement.toggleClass("fa-play");
             autoscrollChatIconElement.toggleClass("fa-pause");
@@ -220,31 +225,38 @@
                     function (stream) { /* user accepted access to a/v */
                         console.log("Access granted to audio/video");
                         local_media_stream = stream;
-                        var local_media = $("<audio>");
+                        var local_media = $("<audio style='display: none'>");
                         local_media.attr("autoplay", "autoplay");
                         local_media.attr("controls", "");
                         local_media.attr('id', "myAudio");
                         var controlPanelElement = $('#control-panel');
-                        controlPanelElement.append("<div><b>Options :<b><br></div>"
-                                + "<div id='myInterface'>"
+                        controlPanelElement.append("<div><h5>Your settings</h5></div>"
+                                + "<div id='self-panel-container'>"
                                 + "<div id='self-mute-microphone-container' style='display: inline' rel='microphone-container' onclick='toggle_my_stream()'>"
-                                + "<a id='self-mute-microphone-button' class='btn btn-sm ui-button' href='#' rel='popover' data-content='Mute your microphone' data-placement='bottom' data-trigger='hover'>"
+                                + "<a id='self-mute-microphone-button' class='btn btn-sm ui-button' href='#' title='Mute your microphone' data-placement='bottom' data-toggle='tooltip'>"
                                 + "<i id='self-mute-microphone-icon' class='fa fa-microphone'></i>"
                                 + "</a>"
                                 + "</div>"
-                                + "<input type='button' id='changeNameButton' class='btn btn-sm' onclick='change_username()' value='Change username'>"
+                                + "<input type='button' id='changeNameButton' class='btn btn-sm btn-primary' onclick='change_username()' value='Change username'>"
                                 + "<br>");
-                        $('a[rel="popover"]').popover();
-                        $('#myInterface').append(local_media);
-                        controlPanelElement.append('<div><b>Channel user volumes :<b><br></div>');
+                        $('#self-panel-container').find('[data-toggle="tooltip"]').tooltip();
+                        $('#self-panel-container').append(local_media);
+                        $('#self-panel-container').find('audio').get(0).volume = 0; // Self audio muted by default
+                        controlPanelElement.append('<div><h5>Channel users</h5></div>');
                         attachMediaStream(local_media[0], stream);
                         MICROPHONE_OK = true;
                         if (callback) callback();
                     },
                     function () { /* user denied access to a/v */
                         console.log("Access denied for audio/video");
-                        $('body').append("Me : <br><div id='myInterface'><input type='button' id='changeNameButton' onclick='change_username()' value='Changer de nom'><br>");
-                        $('body').append('<br>Others :<br>');
+                        var controlPanelElement = $('#control-panel');
+                        controlPanelElement.append("<div>" +
+                                "<h5>Your settings</h5>" +
+                                "</div>"
+                                + "<div id='self-panel-container'>"
+                                + "<input type='button' id='changeNameButton' class='btn btn-sm btn-primary' onclick='change_username()' value='Change username'>"
+                                + "<br>");
+                        controlPanelElement.append('<div><h5>Channel users</h5><br></div>');
                         if (callback) callback();
                     });
         }
@@ -252,23 +264,56 @@
         function toggle_my_stream() {
             var audioTracks = local_media_stream.getAudioTracks();
             var iconElement = $('#self-mute-microphone-icon');
-            var popoverElement = $('#self-mute-microphone-button');
+            var buttonElement = $('#self-mute-microphone-button');
             if (audioTracks[0]) {
                 if (audioTracks[0].enabled == true) {
                     audioTracks[0].enabled = false;
-                    $(popoverElement).attr('data-content', 'Unmute your microphone');
+                    $(buttonElement).attr("title", "Unmute your microphone")
+                            .tooltip('fixTitle')
+                            .tooltip('show');
                     signaling_socket.emit('muted')
                 }
                 else {
                     audioTracks[0].enabled = true;
-                    $(popoverElement).attr('data-content', 'Mute your microphone');
+                    $(buttonElement).attr("title", "Mute your microphone")
+                            .tooltip('fixTitle')
+                            .tooltip('show');
                     signaling_socket.emit('unmuted')
                 }
 
                 $(iconElement).toggleClass('fa-microphone');
                 $(iconElement).toggleClass('fa-microphone-slash');
-                $(popoverElement).toggleClass('btn-warning');
+                $(buttonElement).toggleClass('btn-warning');
             }
+        }
+
+        function set_user_volume(range_element) {
+            var peer_id = $(range_element).attr("data-peer-id");
+            var volume_value = range_element.value;
+            var mediaElement = peer_media_elements[peer_id];
+            var audioElement = $(mediaElement).find('audio').get(0);
+            audioElement.volume = volume_value;
+        }
+
+        function toggle_user_stream(source_element) {
+            var peer_id = $(source_element).attr("data-peer-id");
+            var mediaElement = peer_media_elements[peer_id];
+            var audioElement = $(mediaElement).find('audio').get(0);
+            var buttonElement = $(mediaElement).find('.remote-user-mute-button').get(0);
+            var iconElement = $(mediaElement).find('.remote-user-mute-icon').get(0);
+            audioElement.muted = !audioElement.muted;
+            if (audioElement.muted) {
+                $(buttonElement).attr("title", "Unmute " + NAMES[peer_id])
+                        .tooltip('fixTitle')
+                        .tooltip('show');
+            } else {
+                $(buttonElement).attr("title", "Mute " + NAMES[peer_id])
+                        .tooltip('fixTitle')
+                        .tooltip('show');
+            }
+            $(iconElement).toggleClass('fa-volume-up');
+            $(iconElement).toggleClass('fa-volume-off');
+            $(buttonElement).toggleClass('btn-danger');
         }
 
         /** Listeners initialization on socket **/
@@ -284,11 +329,13 @@
                     console.log("Connected to signaling server");
                     $('#chat').append("<input type='text' placeholder='Entrez un message' id='chatInput'/>" +
                             "<div id='autoscroll-chat-container' style='display: inline' onclick='toggle_autoscroll()'>"
-                            + "<a id='autoscroll-chat' class='btn btn-sm ui-button' href='#' rel='popover' data-content='Enable Auto-scroll in chat' data-placement='bottom' data-trigger='hover'>"
+                            + "<a id='autoscroll-chat' class='btn btn-sm ui-button' href='#' title='Disable Auto-scroll in chat' data-placement='bottom' data-toggle='tooltip'>"
                             + "<i id='autoscroll-chat-icon' class='fa fa-pause'></i>"
                             + "</a>"
                             + "</div>");
                     add_chat_listener();
+                    $('#chat').find('[data-toggle="tooltip"]').tooltip();
+
                 });
 
                 signaling_socket.on('disconnect', function () {
@@ -361,7 +408,13 @@
                 });
 
                 signaling_socket.on('muted', function (peer) {
-                    $('#' + peer.peer_id.from(2)).prepend('<span class="muted">Muted</span>');
+                    $('#' + peer.peer_id.from(2)).find('.user-controls-container').prepend("<div class='remote-user-is-muted-container muted' style='display: inline' data-peer-id='" + peer.peer_id + "'>"
+                            + "<button class='btn btn-sm btn-info ui-button remote-user-is-muted-button disabled' href='#' title='" + NAMES[peer.peer_id] + " is self-muted' data-placement='bottom' data-toggle='tooltip'>"
+                                // TODO : attention ici le nom ne sera pas changer en cas de rename !
+                            + "<i class='fa fa-microphone-slash remote-user-is-muted-icon'></i>"
+                            + "</button>"
+                            + "</div>");
+                    $('#' + peer.peer_id.from(2)).find('.user-controls-container').find('[data-toggle="tooltip"]').tooltip();
                 })
 
                 signaling_socket.on('unmuted', function (peer) {
@@ -413,7 +466,7 @@
                     }
                     peer_connection.onaddstream = function (event) {
                         console.log("onAddStream", event);
-                        var remote_media = $("<audio>");
+                        var remote_media = $("<audio style='display: none'>");
                         remote_media.attr("autoplay", "autoplay");
                         if (MUTE_AUDIO_BY_DEFAULT) {
                             remote_media.attr("muted", "true");
@@ -423,6 +476,18 @@
                         console.log(peer_id.from(2));
                         $('#control-panel').append('<div id="' + peer_id.from(2) + '"></div>');
                         $('#' + peer_id.from(2)).append(remote_media);
+                        // TODO : attention ici le nom ne sera pas changer en cas de rename !
+                        $('#' + peer_id.from(2)).append("<div class='user-panel-container'><b>" + NAMES[peer_id] + "</b> :<br>");
+                        $('#' + peer_id.from(2)).append("<div class='user-controls-container'>"
+                                + "<div class='remote-user-mute-container' style='display: inline' onclick='toggle_user_stream(this)' data-peer-id='" + peer_id + "'>"
+                                + "<a class='btn btn-sm ui-button remote-user-mute-button' href='#' data-toggle='tooltip' title='Mute " + NAMES[peer_id] + "' data-placement='bottom'>"
+                                + "<i class='fa fa-volume-up remote-user-mute-icon'></i>"
+                                + "</a>"
+                                + "</div>"
+                                + "<div class='user-volume-range-container' style='display: inline-block; top: 6px;position: relative;'><input class='custom-range' type='range' min='0' max='1' step='0.01' value='1' oninput='set_user_volume(this)' onchange='set_user_volume(this)' data-peer-id='" + peer_id + "'></div>"
+                                + "</div></div>");
+
+                        $('#' + peer_id.from(2)).find('[data-toggle="tooltip"]').tooltip();
 
                         peer_media_elements[peer_id] = $('#' + peer_id.from(2));
                         attachMediaStream(remote_media[0], event.stream);
